--- a/components/nav/styles.css
+++ b/components/nav/styles.css
@@ -6,4 +6,23 @@
     align-items: start; */
     display: flex;
     justify-content: space-between;
+    align-items: center;
+}
+
+.mobile-view{
+    background-color: #384064;
+    box-shadow: 2px 1px 10px #9da9ce;
+    width: 70%;
+    min-width: 150px;
+    max-width: 220px;
+    color: white;
+    padding: 10px 15px;
+    position: absolute;
+    right: 20px;
+    top: -30px;
+    z-index: 10;
+}
+.mobile-view a{
+    display: block;
+    padding-bottom: 5px;
 }
